417178: [CSS] The CSS Engine shall support compartments (Show/Hide, collapse, show title...) https://bugs.eclipse.org/bugs/show_bug.cgi?id=417178
- Remove the hard-coded "visible = false" for Shape Compartments
(Symbols framework)
- Set "visible = false" in the Base CSS stylesheet for Shape
Compartments

--- a/plugins/infra/gmfdiag/css/org.eclipse.papyrus.infra.gmfdiag.css/resources/base.css
+++ b/plugins/infra/gmfdiag/css/org.eclipse.papyrus.infra.gmfdiag.css/resources/base.css
@@ -17,6 +17,10 @@ unwished behaviors, related to the base implementation (GMF, Papyrus...)
 
 */
 
+Compartment[type="compartment_shape_display"]{
+	visible:false;
+}
+
 * {
  	lineColor:black; /* Avoid the gray line-colors from default GMF connectors */
  	fontName:"Segoe UI"; /* Default font used in Papyrus. It is different from the GMF default */
